--- a/src/language.yml
+++ b/src/language.yml
@@ -6,7 +6,8 @@ noPermission: '&cYou are not permitted to do this!'
 commandMenu:
   header: ' &e-------- &6VoidTeleport  &e- &6Commands &e--------'
   command:
-    tp: '&b/vtp tp &7- Teleport to the void spawn location.'
+    spawn: '&b/vtp spawn &7- Teleport to the worlds spawn location.'
+    random: '&b/vtp random &7- Teleport to a random location in the world.'
   morePages: ' &7Type &6/vtp {PAGE} &7for more.'
   noCommands: ' &7You are not allowed to use commands.'
   footer: ' &e----------------------------------------'
