--- a/src/language.yml
+++ b/src/language.yml
@@ -3,10 +3,10 @@
 
 noPermission: '&cYou are not permitted to do this!'
 
-teleporting: '&7Teleporting...'
+teleporting: '&6Teleporting...'
 spawn:
-  enabled: true
-  message: '&&7You have been teleported to the world spawn.'
+  enabled: false
+  message: '&7You have been teleported to the world spawn.'
 random: '&7You have been teleported to &6{X-POS}&7, &6{Y-POS}&7, &6{Z-POS}&7.'
 
 commandMenu:
