/vtp setspawn now sets and saves world spawn

--- a/src/commands.yml
+++ b/src/commands.yml
@@ -1,6 +1,11 @@
 # Commands file for VoidTeleport
 # Created by KevinNovak
 
+setSpawn:
+- 'setspawn'
+- 'set'
+- 'spawnset'
+
 spawn:
 - 'spawn'
 - 'tp'
