Worlds disabled by default

--- a/src/worlds/default.yml
+++ b/src/worlds/default.yml
@@ -2,7 +2,7 @@
 # Created by KevinNovak
 
 teleportOutOfVoid:
-  enabled: true
+  enabled: false
   toWorld: 'world'
   useRandom: false
 worldSpawn:
